--- a/teaching.htm
+++ b/teaching.htm
@@ -105,8 +105,7 @@ ul.topnav li.icon {display: none;}
 <hr>
 <h3><font color="#002F6C">BIMS 8701/8702: Computational Biology I/II</font></h3>
 <p style="line-height: 1.6;">
-Spring 2024: Coming soon
-<!--<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2024: Course website</a>-->
+<a href="https://cphg.github.io/compbio/" target="_blank">Spring 2024: Course website</a>
 </p>
 <hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
