--- a/teaching.htm
+++ b/teaching.htm
@@ -103,7 +103,7 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
-<h3><font color="#002F6C">BIMS 8701/8702: Computational Biology I/II</font></h3>
+<h3><font color="#002F6C">BIMS 8701/8702: Introduction to Computational Biology I/II</font></h3>
 <p style="line-height: 1.6;">
 <a href="https://cphg.github.io/compbio/" target="_blank">Spring 2024: Course website</a>
 </p>
@@ -182,7 +182,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: January 30, 2024</p>
+<p align="right">Last modified: February 5, 2024</p>
 </div>
 
 </body></html>
