--- a/publication.htm
+++ b/publication.htm
@@ -168,7 +168,7 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <li><p><a href="https://www.nature.com/articles/s41590-023-01720-w" target="_blank">The transcriptional cofactor Tle3 reciprocally controls effector and central memory CD8<sup>+</sup> T cell fates</a><br> 
 Xin Zhao, Wei Hu, Sung Rye Park, Shaoqi Zhu, <u>Shengen Shawn Hu</u>, <u>Chongzhi Zang</u>, Weiqun Peng, Qiang Shan<sup>#</sup>, Hai-Hui Xue<sup>#</sup>
 <br>
-<i><b>Nature Immunology</b></i>, doi: <a href="https://doi.org/10.1038/s41590-023-01720-w" target="_blank">https://doi.org/10.1038/s41590-023-01720-w</a> (2024)
+<i><b>Nature Immunology</b></i> 25, 294&ndash;306 (2024)
 </p></li>
 <li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC/MCM binding sites in human cells reveals a lack of overlap</a><br>
 <u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
