--- a/bart/index.htm
+++ b/bart/index.htm
@@ -252,8 +252,8 @@
       Please download from the link provided above or use the following command lines.
 
     <p style="font-family:courier;padding-left:64px;">
-      $ wget https://virginia.box.com/shared/static/byufe8n6ft47hs4q7l6xxhyqnifjohm8.gz -O hg38_library.tar.gz <br>
-      $ wget https://virginia.box.com/shared/static/bxli2cc6zfj7h1llt9vx9km9u0d4vwhc.gz -O mm10_library.tar.gz
+      $ wget https://virginia.box.com/shared/static/2kqczz9gixetcr9p4bl650uyrio5zd33.gz -O hg38_library.tar.gz <br>
+      $ wget https://virginia.box.com/shared/static/bxdggnhp4bjz2l5h2zjlisnzp0ac7axf.gz -O mm10_library.tar.gz
 
 
     <p>
@@ -261,10 +261,9 @@
       unpacked BART.
     </p>
     <p style="font-family:courier;padding-left:64px;">
-      $ wget https://virginia.box.com/shared/static/031noe820hk888qzcxvw1cazol1gdhi0.gz -O bart_v2.0.tar.gz <br>
-      $ tar zxf bart_v2.0.tar.gz
-      <br>
-      $ cd bart_v2.0
+      $ wget https://virginia.box.com/shared/static/jvwc097d7ca0oart6ka4ivonqi4qxkox.zip -O bart21.zip <br>
+      $ gunzip bart21.zip <br>      
+      $ cd bart2-master
     </p>
 
     <p>
