--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">February 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shengyuan and Zhaoxia each receives a Trainee Travel Award from the UVA Comprehensive Cancer Center, for their upcoming poster presentations at the AACR Annual Meeting and the Cold Spring Harbor Meeting, respectively. Congratulations to both!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">December 2023</font>
 		</p>
 	</div>
@@ -1008,7 +1020,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: January 30, 2024</p>
+<p align="right">Last modified: February 29, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
