--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Shengyuan and Zhaoxia each receives a Trainee Travel Award from the UVA Comprehensive Cancer Center, for their upcoming poster presentations at the AACR Annual Meeting and the Cold Spring Harbor Meeting, respectively. Congratulations to both!
+		Shengyuan and Zhaoxia each receives a Trainee Travel Award from the UVA Comprehensive Cancer Center, for their upcoming poster presentation at the AACR Annual Meeting and Cold Spring Harbor Meeting, respectively. Congratulations to both!
 		</p>
 	</div>
 </div>
