--- a/publication.htm
+++ b/publication.htm
@@ -165,15 +165,20 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://elifesciences.org/articles/89548" target="_blank">Integrative analysis of DNA replication origins and ORC-/MCM-binding sites in human cells reveals a lack of overlap</a><br>
+<u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
+<br>
+<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548" target="_blank">https://doi.org/10.7554/eLife.89548</a> (2024)
+</p></li>
+<li><p><a href="https://doi.org/10.1093/nar/gkae164" target="_blank">DNA fragility at topologically associated domain boundaries is promoted by alternative DNA secondary structure and topoisomerase II activity</a><br>
+Heather M. Raimer Young, Pei-Chi Hou, Anna R. Bartosik, Naomi D. Atkin, Lixin Wang, <u>Zhenjia Wang</u>, Aakrosh Ratan, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
+<br>
+<i><b>Nucleic Acids Research</b></i>, doi: <a href="https://doi.org/10.1093/nar/gkae164" target="_blank">https://doi.org/10.1093/nar/gkae164</a> (2024)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41590-023-01720-w" target="_blank">The transcriptional cofactor Tle3 reciprocally controls effector and central memory CD8<sup>+</sup> T cell fates</a><br> 
 Xin Zhao, Wei Hu, Sung Rye Park, Shaoqi Zhu, <u>Shengen Shawn Hu</u>, <u>Chongzhi Zang</u>, Weiqun Peng, Qiang Shan<sup>#</sup>, Hai-Hui Xue<sup>#</sup>
 <br>
 <i><b>Nature Immunology</b></i> 25, 294&ndash;306 (2024)
-</p></li>
-<li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC/MCM binding sites in human cells reveals a lack of overlap</a><br>
-<u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
-<br>
-<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548" target="_blank">https://doi.org/10.7554/eLife.89548</a> (2023)
 </p></li>
 <li><p><a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
 Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Astrid Catalina Alvarez-Yela, Yipei Song, Qi Cheng, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, P. Todd Stukenberg, Aloke V. Finn, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
@@ -340,7 +345,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="37">
+<ol style="padding-left: 24px; line-height: 1.6;" start="38">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -460,7 +465,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: January 18, 2024</p>
+<p align="right">Last modified: April 3, 2024</p>
 </div>
 
 <script>
