--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">April 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Mengxue's replication origin data integration paper (final version) in collaboration with Anindya Dutta is published in <a href="https://elifesciences.org/articles/89548" target="_blank"><i><b>eLife</b></i></a>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">February 2024</font>
 		</p>
 	</div>
@@ -1020,7 +1032,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: February 29, 2024</p>
+<p align="right">Last modified: April 3, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
