--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,23 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		<a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/2342/739601" target="_blank">Hongpan</a>, <a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/7355/737468" target="_blank">Shengyuan</a>, <a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/7435/738559" target="_blank">Shawn</a>, and Jingyi each presents a poster at the 2024 AACR Annual Meeting in San Diego, California.
+		<br><br>
+		Congratulation to Grant Atwood, who receives a Dean’s Undergraduate Engineering Research Fellowship to do research in the lab this summer!
+		<br><br>
 		Mengxue's replication origin data integration paper (final version) in collaboration with Anindya Dutta is published in <a href="https://elifesciences.org/articles/89548" target="_blank"><i><b>eLife</b></i></a>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
+		<font color="#002F6C">March 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Zhaoxia gives a poster presentation at Cold Spring Harbor Meeting on Systems Biology: Global Regulation of Gene Expression.
 		</p>
 	</div>
 </div>
@@ -281,7 +297,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		<a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/871/719946" target="_blank">Shawn</a> and <a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/3174/724591" target="_blank">Mengxue</a> each presents a poster, while Chongzhi gives an <a href="https://www.abstractsonline.com/pp8/#!/10828/presentation/11217" target="_blank">invited talk</a>, at the 2023 AACR Annual Meeting.
+		<a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/871/719946" target="_blank">Shawn</a> and <a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/3174/724591" target="_blank">Mengxue</a> each presents a poster, while Chongzhi gives an <a href="https://www.abstractsonline.com/pp8/#!/10828/presentation/11217" target="_blank">invited talk</a>, at the 2023 AACR Annual Meeting in Orlando, Florida.
 		</p>
 	</div>
 </div>
@@ -1032,7 +1048,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 3, 2024</p>
+<p align="right">Last modified: April 10, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
