--- a/teaching.htm
+++ b/teaching.htm
@@ -77,6 +77,28 @@ ul.topnav li.icon {display: none;}
     display: table;
     clear: both;
 }
+
+.collapsible {
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 16px;
+}
+
+.collapsible:hover {
+  background-color: #fff;
+}
+
+.content {
+  padding: 0 3px;
+  display: none;
+  overflow: hidden;
+}
+
 </style>
 <title>Chongzhi Zang Lab</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -117,8 +139,34 @@ ul.topnav li.icon {display: none;}
 <p style="line-height: 1.6;">
 <a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
 </p>
+<!--<button type="button" class="collapsible">
+<p style="text-indent:100px; ">Lecture slides</p>
+</button>
+<div class="content">
+<ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
+<li><a href="https://uvahealth.com/findadoctor/profile/todd-w-bauer" target="_blank"><font color="#002F6C">Todd W. Bauer</font></a>, Division of Surgical Oncology, Department of Surgery</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology</li>
+<li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine</li>
+<li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Center for Public Health Genomics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://www.immunology.virginia.edu/Sun/" target="_blank"><font color="#002F6C">Jie Sun</font></a>, Beirne B. Carter Center for Immunology Research</li>
+<li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology</li>
+<li><a href="https://uvahealth.com/findadoctor/Agnieszka-Swiatecka-Urban-1497816045" target="_blank"><font color="#002F6C">Agnieszka Swiatecka-Urban</font></a>, Department of Pediatric Nephrology</li>
+<li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://www.cs.virginia.edu/~az9eg/website/lab.html" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science</li>
+<li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology</li>
+(in alphabetical order)
+</p></ul>
+</div>-->
 <hr>
 <h3><font color="#002F6C">BIOC 8014: Chromatin</font></h3>
+<p style="line-height: 1.6;">
+	Spring 2024 Lecture: Super-enhancers and transcriptional condensates. <a href="slides/BIOC8014_chromatinII_week5_20240423.pdf" target="_blank">[Slides]</a>
+</p>
 <p style="line-height: 1.6;">
 	Spring 2022 Lecture: Super-enhancers and transcriptional condensates. <a href="slides/BIOC8014_chromatinII_week6.pdf" target="_blank">[Slides]</a>
 </p>
@@ -182,7 +230,24 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: February 5, 2024</p>
+<p align="right">Last modified: April 22, 2024</p>
 </div>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 
 </body></html>
