--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Katherine Zhang, high school student volunteered in the lab in Summer 2022, will matriculate at UVA this fall as part of the Class of 2028. Congratulations and welcome back!
+		<br><br>
 		<a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/2342/739601" target="_blank">Hongpan</a>, <a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/7355/737468" target="_blank">Shengyuan</a>, <a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/7435/738559" target="_blank">Shawn</a>, and Jingyi each presents a poster at the 2024 AACR Annual Meeting in San Diego, California.
 		<br><br>
 		Congratulation to Grant Atwood, who receives a Dean’s Undergraduate Engineering Research Fellowship to do research in the lab this summer!
@@ -1048,7 +1050,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 10, 2024</p>
+<p align="right">Last modified: April 20, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
