--- a/people.htm
+++ b/people.htm
@@ -272,7 +272,7 @@ Kyubin Lee joined the lab as a postdoctoral research associate in October 2022. 
 <p style="line-height: 1.6;">
 <img align="right" src="images/mengxue_tian.jpg" style="width:180px">
 <b>Mengxue Tian</b>
-<a href="mailto:mt9tz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:mt9tz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=TOKBAZQAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Mengxue Tian is a PhD student in the Biomedical Sciences (BIMS) program. Before joining UVA as a research specialist in 2019, she received her B.E. and M.S. in Bioinformatics from School of Life Science and Technology, Tongji University in China. She is working on high-throughput genomics data analysis for studying transcription and replication mechanisms in different disease and biological systems.
 </p><br><br>
@@ -314,7 +314,7 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 <b>Jingyi Wang</b>
 <a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Jingyi Wang is a Third Year undergraduate student with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics and computational biology after graduation.
+Jingyi Wang is a Third Year undergraduate student with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and will continue studying computational biology as a PhD student in the lab.
 </p><br><br><br><br>
 <h4><font color="#002F6C">Class of 2025</font></h4>
 <p style="line-height: 1.6;">
@@ -697,7 +697,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: January 30, 2024</p>
+<p align="right">Last modified: May 1, 2024</p>
 
 </div>
 
