--- a/publication.htm
+++ b/publication.htm
@@ -155,16 +155,16 @@ Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak 
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.09.13.557622" target="_blank">https://doi.org/10.1101/2023.09.13.557622</a> (2023)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.09.21.508770v2" target="_blank">Temporal dynamics of the multi-omic response to endurance exercise training across tissues</a><br>
-MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
-<br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2022.09.21.508770" target="_blank">https://doi.org/10.1101/2022.09.21.508770</a> (2022)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41586-023-06877-w" target="_blank">Temporal dynamics of the multi-omic response to endurance exercise training</a><br>
+MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
+<br>
+<i><b>Nature</b></i> 629, 174&ndash;183 (2024)
+</p></li>
 <li><p><a href="https://elifesciences.org/articles/89548" target="_blank">Integrative analysis of DNA replication origins and ORC-/MCM-binding sites in human cells reveals a lack of overlap</a><br>
 <u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
@@ -174,6 +174,11 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 Heather M. Raimer Young, Pei-Chi Hou, Anna R. Bartosik, Naomi D. Atkin, Lixin Wang, <u>Zhenjia Wang</u>, Aakrosh Ratan, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
 <br>
 <i><b>Nucleic Acids Research</b></i>, doi: <a href="https://doi.org/10.1093/nar/gkae164" target="_blank">https://doi.org/10.1093/nar/gkae164</a> (2024)
+</p></li>
+<li><p><a href="https://www.mdpi.com/2073-4425/15/2/144" target="_blank">DARDN: A deep-learning approach for CTCF binding sequence classification and oncogenic regulatory feature discovery</a><br>
+Hyun Jae Cho, <u>Zhenjia Wang</u>, <u>Yidan Cong</u>, Stefan Bekiranov, Aidong Zhang<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
+<br>
+<i><b>Genes</b></i> 15(2), 144 (2024)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41590-023-01720-w" target="_blank">The transcriptional cofactor Tle3 reciprocally controls effector and central memory CD8<sup>+</sup> T cell fates</a><br> 
 Xin Zhao, Wei Hu, Sung Rye Park, Shaoqi Zhu, <u>Shengen Shawn Hu</u>, <u>Chongzhi Zang</u>, Weiqun Peng, Qiang Shan<sup>#</sup>, Hai-Hui Xue<sup>#</sup>
@@ -345,7 +350,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="38">
+<ol style="padding-left: 24px; line-height: 1.6;" start="40">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -465,7 +470,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: April 3, 2024</p>
+<p align="right">Last modified: May 1, 2024</p>
 </div>
 
 <script>
