--- a/publication.htm
+++ b/publication.htm
@@ -173,7 +173,7 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <li><p><a href="https://doi.org/10.1093/nar/gkae164" target="_blank">DNA fragility at topologically associated domain boundaries is promoted by alternative DNA secondary structure and topoisomerase II activity</a><br>
 Heather M. Raimer Young, Pei-Chi Hou, Anna R. Bartosik, Naomi D. Atkin, Lixin Wang, <u>Zhenjia Wang</u>, Aakrosh Ratan, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
 <br>
-<i><b>Nucleic Acids Research</b></i>, doi: <a href="https://doi.org/10.1093/nar/gkae164" target="_blank">https://doi.org/10.1093/nar/gkae164</a> (2024)
+<i><b>Nucleic Acids Research</b></i> 52, 3837&ndash;3855 (2024)
 </p></li>
 <li><p><a href="https://www.mdpi.com/2073-4425/15/2/144" target="_blank">DARDN: A deep-learning approach for CTCF binding sequence classification and oncogenic regulatory feature discovery</a><br>
 Hyun Jae Cho, <u>Zhenjia Wang</u>, <u>Yidan Cong</u>, Stefan Bekiranov, Aidong Zhang<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
