--- a/people.htm
+++ b/people.htm
@@ -286,7 +286,7 @@ Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before
 <p style="line-height: 1.6;">
 <img align="right" src="images/zhaoxia_ma.jpg" style="width:180px">
 <b>Zhaoxia Ma</b>
-<a href="mailto:prm2zt@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:prm2zt@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=DiyIz_8AAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University in China. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
 </p><br><br>
@@ -697,7 +697,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 1, 2024</p>
+<p align="right">Last modified: May 15, 2024</p>
 
 </div>
 
