--- a/people.htm
+++ b/people.htm
@@ -317,13 +317,13 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 Jingyi Wang is a Third Year undergraduate student with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and will continue studying computational biology as a PhD student in the lab.
 </p><br><br><br><br>
 <h4><font color="#002F6C">Class of 2025</font></h4>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/ivory_tang.jpg" style="width:180px">
 <b>Ivory Tang</b>
 <a href="mailto:bjm7vv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. She is looking forward to combining topics in biology, statistics, and computer science and hopes to attend medical school after graduation. In her free time, she enjoys listening to music and spending time outside.
-</p><br><br><br><br>
+</p><br><br><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/andy_cao.jpg" style="width:180px">
 <b>Andy Cao</b>
