--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">May 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Congratulations to Jingyi Wang on her graduation from UVA! She is among the less than 5% of undergraduate students who earned their degrees in 3 years. Jingyi will continue her PhD studies in the lab starting this summer. Way to go!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">April 2024</font>
 		</p>
 	</div>
@@ -1050,7 +1062,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 20, 2024</p>
+<p align="right">Last modified: June 3, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
