--- a/people.htm
+++ b/people.htm
@@ -297,6 +297,13 @@ Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She recei
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Kevin is a medical student at UVA expected to graduate in 2026. He received his bachelor's from Northwestern University in 2021 and spent a year there developing skills in whole-genome, RNA, and epigenomic sequencing methods in the context of T cell lymphomas. His research interests lie in the use of high-throughput sequencing methods in the diagnosis, management, and development of treatments for of diseases in a clinical setting.
 </p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/jingyi_wang.jpg" style="width:180px">
+<b>Jingyi Wang</b>
+<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program starting summer 2024. She completed her undergraduate degree from UVA with a biochemistry major and a data analytics minor in 3 years. She joined the lab as a Second Year student and will be continuing her PhD studies in the lab. She is interested in investigating genomics problems using computational approaches.
+</p><br><br><br>
 <hr>
 <h3><font color="#002F6C">Research Assistant</font></h3>
 <p style="line-height: 1.6;">
@@ -308,14 +315,6 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<h4><font color="#002F6C">Class of 2024</font></h4>
-<p style="line-height: 1.6;">
-<img align="right" src="images/jingyi_wang.jpg" style="width:180px">
-<b>Jingyi Wang</b>
-<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Jingyi Wang is a Third Year undergraduate student with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and will continue studying computational biology as a PhD student in the lab.
-</p><br><br><br><br>
 <h4><font color="#002F6C">Class of 2025</font></h4>
 <!--<p style="line-height: 1.6;">
 <img align="right" src="images/ivory_tang.jpg" style="width:180px">
@@ -697,7 +696,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 15, 2024</p>
+<p align="right">Last modified: June 3, 2024</p>
 
 </div>
 
