--- a/people.htm
+++ b/people.htm
@@ -316,13 +316,6 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <h4><font color="#002F6C">Class of 2025</font></h4>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/ivory_tang.jpg" style="width:180px">
-<b>Ivory Tang</b>
-<a href="mailto:bjm7vv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. She is looking forward to combining topics in biology, statistics, and computer science and hopes to attend medical school after graduation. In her free time, she enjoys listening to music and spending time outside.
-</p><br><br><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/andy_cao.jpg" style="width:180px">
 <b>Andy Cao</b>
@@ -337,6 +330,13 @@ Andy Cao is a Third Year undergraduate student (Class of 2025) planning to study
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Nina Chinnam is a Third Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
 </p><br><br><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/ibrahim_khanani.jpg" style="width:180px">
+<b>Ibrahim Khanani</b>
+<a href="mailto:scp5qe@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Ibrahim Khanani is a rising Fourth Year student (Class of 2025) studying Computer Science with a minor in Computational Biology at Duke University. He is doing summer research in the lab supported by UVA School of Medicine's Summer Research Internship Program (SRIP). He is excited to pursue further studies into the intersection of technology and medicine, with a focus on genomics and gene therapies.
+</p><br><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/yanbin_xu.jpg" style="height:180px">
 <b>Yanbin Xu</b>
@@ -696,7 +696,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: June 3, 2024</p>
+<p align="right">Last modified: June 12, 2024</p>
 
 </div>
 
