--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">June 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shengyuan Wang and Hongpan Zhang each receives a Trainee Fellowship grant from UVA Comprehensive Cancer Center. Congratulations to both!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">May 2024</font>
 		</p>
 	</div>
@@ -659,7 +671,7 @@ function myFunction() {
 		<p>
 		Zack Thomas presents a poster at ISMB 2020 virtual meeting. Way to go!
 		<br><br>
-		Dr. Zhenjia Wang receives a Trainee Support Grant from UVA Cancer Center. Congratulations Zhenjia!
+		Dr. Zhenjia Wang receives a Trainee Fellowship Grant from UVA Cancer Center. Congratulations Zhenjia!
 		<br><br>
 		The lab welcomes BIMS rotation student Audrey Putelo!
 		</p>
@@ -1062,7 +1074,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: June 3, 2024</p>
+<p align="right">Last modified: July 2, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
