--- a/people.htm
+++ b/people.htm
@@ -230,13 +230,6 @@ Dr. Chongzhi Zang is an Associate Professor in the Center for Public Health Geno
 </p><br>
 <hr>
 <h3><font color="#002F6C">Research Scientist</font></h3>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/zhenjia_wang.jpg" style="width:180px">
-<b>Zhenjia Wang, PhD</b>
-<a href="mailto:zhenjia@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=-mxk13sAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Zhenjia joined the lab as a postdoctoral research associate in January 2017 and has been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
-</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b>
@@ -246,13 +239,13 @@ Dr. Sheng'en Shawn Hu is a research scientist after postdoctoral training in the
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Postdoctoral Associates</font></h3>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
 <b>Qingying Chen, PhD</b>
 <a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=u-N8u08AAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
-</p><br><br>
+</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
 <b>Shengyuan Wang, PhD</b>
@@ -260,13 +253,6 @@ Qingying Chen joined the lab as a postdoctoral research associate in January 202
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
 </p><br><br><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/kyubin_lee.jpg" style="width:180px">
-<b>Kyubin Lee, PhD</b>
-<a href="mailto:xdz2gw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=Kq937DsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Kyubin Lee joined the lab as a postdoctoral research associate in October 2022. He received his Ph.D. in Computer Science and B.S. in Mathematics from the University of Wisconsin-Madison. His Ph.D. research with Mark Craven focused on developing explainable machine learning (ML) methods with applications to mapping viral genotypes to host disease phenotypes. He also worked on developing computational methods for cancer genomics research at National Cancer Center in South Korea as part of his military service. Co-mentored by Drs. Yuh-Hwa Wang and Francine Garrett-Bakelman at the Department of Biochemistry and Molecular Genetics, he is interested in applying integrative ML methods to address various challenges to understand human biology. Outside of research, he enjoys having time with his family.
-</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
@@ -323,13 +309,13 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Andy Cao is a Third Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
 </p><br><br><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/nina_chinnam.jpg" style="width:180px">
 <b>Nina Chinnam</b>
 <a href="mailto:fhs9af@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Nina Chinnam is a Third Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
-</p><br><br><br><br><br>
+</p><br><br><br><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/ibrahim_khanani.jpg" style="width:180px">
 <b>Ibrahim Khanani</b>
@@ -403,6 +389,12 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<th>Time at Lab</th>
 		<th>Current Position</th>
 	</tr>
+<!--	<tr>
+		<td><b>Qingying Chen, PhD</b></td>
+		<td>PhD in Physics, University of Tulsa</td>
+		<td>01/2021&ndash;04/2024</td>
+		<td> </td>
+	</tr>-->
 	<tr>
 		<td><b>Yidan Cong, PhD</b></td>
 		<td>PhD in Chemistry, University of North Carolina at Chapel Hill</td>
@@ -696,7 +688,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: June 12, 2024</p>
+<p align="right">Last modified: July 2, 2024</p>
 
 </div>
 
