--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,9 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Shengyuan Wang and Hongpan Zhang each receives a Trainee Fellowship grant from UVA Comprehensive Cancer Center. Congratulations to both!
+		Shengyuan and Hongpan each receives a Trainee Fellowship grant from UVA Comprehensive Cancer Center. Congratulations to both!
+		<br><br>
+		The Board of Visitors of UVA approves Chongzhi's tenure, effective July 1, 2024.
 		</p>
 	</div>
 </div>
