--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">July 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Chongzhi is selected as a <a href="https://med.virginia.edu/office-for-research/research-development/internal-funding/pinn-scholars/" target="_blank">Vivian Pinn Scholar</a> by UVA School of Medicine. See <a href="https://news.med.virginia.edu/featured/three-school-of-medicine-faculty-named-2024-pinn-scholars/" target="_blank"><b>news report</b> here</a>.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">June 2024</font>
 		</p>
 	</div>
@@ -1076,7 +1088,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: July 2, 2024</p>
+<p align="right">Last modified: July 12, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
